@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body> 
-<a href="dquery.html">dquery.html</a>
-<br/>
-<a href="savi.html">savi.html</a>
-<br/>
-<a href="savi.html?aid=US-EIN-13-2702768-P3428">savi.html?aid=US-EIN-13-2702768-P3428</a>
-<br/>
-<a href="savi.html?pid=US-USAGOV">savi.html?pid=US-USAGOV</a>
-<br/>
-<a href="savi.html?aid=">savi.html?aid=</a>
-<br/>
-<a href="savi.html?pid=">savi.html?pid=</a>
-<br/>
-<div>Multiple targets in Results data</div>
-<a href="http://d-portal.org/ctrack.html?publisher=XM-DAC-47021#view=act&aid=XM-DAC-47021-1394-DFID">XM-DAC-47021-1394-DFID</a>
-</body>
+	<head>
+		<title>Debugging the new SAVi</title>
+		<style>
+			div		{padding-bottom:20px;}
+		</style>
+	</head>
+	<body> 
+		<div><a href="dquery.html">dquery.html</a></div>
+		
+		<div><a href="savi.html">savi.html</a></div>
+		
+		<div><a href="savi.html?pid=US-USAGOV">Publisher US-USAGOV</a></div>
+		
+		<div><span>Long glossary</span> <a href="savi.html?aid=NL-KVK-41160054-113207">Female farmers deserve better (NL-KVK-41160054-113207)</a></div>
+		
+		<div><span>One region</span> <a href="savi.html?aid=ZA-NPO-029-864-MFA-2015">ZA-NPO-029-864-MFA-2015 (region3.xml)</a></div>
+		
+		<div><span>Planned Disbursements</span> <a href="savi.html?aid=XM-DAC-7-PPR-4000003200">XM-DAC-7-PPR-4000003200</a></div>
+		
+		<div><span>Participating org</span> <a href="savi.html?aid=NL-KVK-41150085-NICHE-BGD-236">NL-KVK-41150085-NICHE-BGD-236</a></div>
+		
+		<div><span>Participating org</span> <a href="savi.html?aid=XI-IATI-EC_NEAR_EUTF_MADAD_T04.141_812">XI-IATI-EC_NEAR_EUTF_MADAD_T04.141_812 (policy1.xml)</a></div>
+		
+		<div><span>Humanitarian in transactions</span> <a href="savi.html?aid=US-EIN-95-3202116-UG">US-EIN-95-3202116-UG (trans_hu3.xml)</a></div>
+		
+		<div><span>All rounder 1</span> <a href="savi.html?aid=NL-KVK-41160054-113237">NL-KVK-41160054-113237 (good1.xml)</a></div>
+		
+		<div><span>All rounder 2</span> <a href="savi.html?aid=NL-KVK-40409352-PRJ08-272-0005">NL-KVK-40409352-PRJ08-272-0005 (good1.xml)</a></div>
+		
+		<div><span>No percentage in country or sector</span> <a href="savi.html?aid=XM-DAC-7-PPR-4000001423">XM-DAC-7-PPR-4000001423 (good1.xml)</a></div>
+		
+		<div><span>Multiple targets in Results data</span> <a href="savi.html?aid=XM-DAC-47021-1394-DFID">XM-DAC-47021-1394-DFID</a></div>
+		
+		<div><span>Front graph need fixing</span> <a href="https://d-portal.org/ctrack.html?country=BE&#view=main">Belgium (BE) Portal</a></div>
+	</body>
 </html>
