@@ -1,3 +1,11 @@
+Development Portal (2020-02-4 shi)
+==============================
+Add planned-disbursement new SAVi
+Update css for transaction and budget tables
+Add recipient-region new SAVi
+Update debug page for new SAVi with more examples
+
+
 Development Portal (2020-02-1 shi)
 ==============================
 Update css for new SAVi dates
